derive/test/compile_fail/tuple_transparent.rs
use sval_derive::*;

#[derive(Value)]
#[sval(transparent)]
pub struct Tuple(i32, i32, i32);

fn main() {

}