derive/test/compile_fail/tuple_transparent.stderr
error: unsupported attribute `transparent` on struct
 --> compile_fail/tuple_transparent.rs:4:8
  |
4 | #[sval(transparent)]
  |        ^^^^^^^^^^^
